# squid

./: .gitignore  .mega-linter.yml  Cargo.toml  Dockerfile  app.yaml  hosts.example
.github/: renovate.json
.github/workflows/: build.yaml  mega-linter.yml  release.yaml
cert/: Cargo.toml
cert/src/: checker.rs
entity/: Cargo.toml
entity/src/: cert.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: config.rs  main.rs
src/api/: cert.rs  mod.rs  server.rs
