[package]
name = "squid"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "cert", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

tokio = { version = "1.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.15.8"
axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1.0.218", features = ["derive"] }
anyhow = "1.0.97"
serde_derive = "1.0.219"
sea-orm = { version = "1.1.0", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
log = "0.4.27"
serde_json = "1.0.140"
