[package]
name = "cert"
version = "0.1.0"
edition = "2024"

[dependencies]
entity = { path = "../entity" }

hostfile = "1.1.1"
chrono = "0.4.41"
url = "2.5.4"
openssl = "0.10.73"
regex = "1.11.1"
once_cell = "1.21.3"
tokio = { version = "1.45.1", features = ["time", "rt"] }
futures = "0.3.31"
sea-orm = "1.1.12"
